# rebelsai_case

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup_env.py
.github/workflows/: ci.yml
docusight/: classifier_pipeline.py  config.py  database.py  dropbox.py  file_utils.py  main.py  models.py
docusight/routers/: authentication.py  classification.py  insight.py  upload.py
tests/: conftest.py  test_authentication.py  test_classification.py  test_insight.py
