[build-system]
requires = ["setuptools"]

[project]
name = "docusight"
version = "0.1.0"
description = "API for document insights and classification"
authors = [
    { name = "Philip Soliman", email = "philipsoliman4133@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "aiosqlite",
    "dropbox",
    "pydantic-settings",
    "aiofiles",
    "transformers",
    "huggingface_hub[hf_xet]",
    "pypdf",
    "python-docx",
    "bs4",
    "striprtf",
    "itsdangerous",
    "pytest",
    "pytest-env",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["docusight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
env = [
    "DATABASE_URL=sqlite+aiosqlite:///./test.db",
    "DROPBOX_APP_KEY=test_app_key",
    "DROPBOX_APP_SECRET=test_app_secret",
    "SESSION_SECRET_KEY=test_secret_key"
]

[project.urls]
Homepage = "https://github.com/PhilipSoliman/rebelsai_case"
Documentation = "https://github.com/PhilipSoliman/rebelsai_case/blob/main/README.md"
Source = "https://github.com/PhilipSoliman/rebelsai_case"
Endpoint = "http://127.0.0.1:8000"